--- a/index.html
+++ b/index.html
@@ -8,6 +8,5 @@
 </head>
 <body>
     <h1>Bienvenido a tu Super Virtual</h1>
-    <script src="./script.js"></script>
-</body>
+    <script src="./main.js"></script>
 </html>
