--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador Supermercado</title>
+    <title>Tienda de Venta de zapatilla</title>
 </head>
 <body>
-    <h1>Bienvenido a tu Super Virtual</h1>
+    <h1>Bienvenido a tu Tienda Virtual</h1>
     <script src="./main.js"></script>
 </html>
